<resources>
    <string name="app_name">HuzhuCommunity</string>

    <!--LoginActivity-->
    <string name="login">登录</string>
    <string name="account">账号</string>
    <string name="password">密码</string>

    <!--RegisterActivity-->
    <string name="confirm_password">确认密码</string>
    <string name="new_user_register">新用户注册</string>
    <string name="forget_password">忘记密码</string>
    <string name="register">注册</string>
    <string name="phone">手机号码</string>
    <string name="sex_with_colon">性别:</string>
    <string name="grade_with_colon">年级:</string>
    <string name="department_with_colon">院系:</string>
    <string name="male">男</string>
    <string name="female">女</string>

    <!--MainActivity-->
    <string name="search">搜索</string>
    <string name="resource">资源</string>
    <string name="request">请求</string>
    <string name="publishNewResource">发布新资源</string>
    <string name="publishNewRequest">发布新请求</string>

    <!--UserProfileActivity-->
    <string name="userProfile">个人信息</string>
    <string name="myStar">我的收藏</string>
    <string name="myComment">我的评论</string>
    <string name="myTrack">我的足迹</string>
    <string name="myMessage">我的消息</string>
    <string name="publishedByMe">我发布的</string>
    <string name="receivedByMe">我接收的</string>
    <string name="setting">设置</string>
    <string-array name="changeBackgroundImage">
        <item>更改背景图片</item>
    </string-array>

    <!--ResReqDetailActivity-->
    <string name="requestDetail">请求详情</string>
    <string name="resourceDetail">资源详情</string>
    <string name="comment">评论</string>
    <string name="star">收藏</string>
    <string name="chat">交流</string>
    <string name="receive">接单</string>
    <string name="received">已截止</string>

    <!--PublishNewRes/ReqActivity-->
    <string name="title">标题</string>
    <string name="content">内容</string>
    <string name="type_with_colon">类型:</string>
    <string name="yuan">￥</string>
    <string name="deadline_with_colon">截止日期：</string>
    <string name="price_with_colon">价格:</string>
    <string name="publish">发布</string>

    <!--MessagesActivity-->
    <string name="message">消息</string>
    <string name="ninetyMore">99+</string>
    <string name="markAllRead">全部已读</string>
    <string name="send">发送</string>

    <!--SettingActivity-->
    <string name="newMessageNotify">新消息提醒</string>
    <string name="recordTrack">记录足迹</string>
    <string name="swipeToFinish">右滑返回 (适用于部分页面)</string>
    <string name="clearCache">清除缓存</string>
    <string name="checkUpdate">检查更新</string>
    <string name="aboutUs">关于我们</string>
    <string name="feedback">反馈</string>
    <string name="exit">退出程序</string>

    <!--AccountProfileActivity-->
    <string name="accountProfile">账户信息</string>
    <string name="userName">用户名</string>
    <string name="sex">性别</string>
    <string name="grade">年级</string>
    <string name="department">院系</string>
    <string name="registerTime">注册时间</string>
    <string name="lastLoginTime">上次登录时间</string>
    <string name="updatePassword">修改密码</string>
    <string name="exitLogin">退出登录</string>
    <string name="changeHead">更换头像</string>

    <!--OthersProfileActivity-->
    <string name="sendMessage">发消息</string>

    <!--MyCommentActivity-->
    <string name="commentByMe">我评论的</string>
    <string name="meMentioned">提到我的</string>

    <!--ProfileUpdateActivity-->
    <string name="finished">完成</string>
    <string name="newPassword">新密码</string>

    <!--othersString-->
    <string name="jump">跳过</string>
    <string name="unreceived">未接</string>
    <string name="status_with_colon">状态:</string>
    <string name="delete">删除</string>
    <string name="markRead">标为已读</string>
    <string name="markUnread">标为未读</string>
    <string name="deleteThisMessage">删除该消息</string>
    <string name="veryGood">非常好</string>
    <string name="solider">小美</string>
    <string name="twoHoursAgo">2小时前</string>
    <string name="finishedInTwoDays">2天后截止</string>
    <string name="twoYuan">2￥</string>
    <string name="loading">正在加载\.\.\.</string>
    <string name="virtualRequestDetail">能不能给我一包生命一号，那种富含咖啡因，内啡肽，以及各种有助于健康的神经递质的只要998的含片</string>
    <string name="virtualResourceDetail">这是一个每个人都需要的富含咖啡因，内啡肽，以及各种有助于健康的神经递质的只要998的含片</string>
    <string name="virtualComment">这玩意儿用着还不错，比较上手</string>
    <string name="searchResultOf">的搜索结果</string>
    <string name="inputProblemOrOpinion">请输入遇到的问题或意见</string>
    <string name="commit">提交</string>
    <string name="wyb">武一博</string>
    <string name="sjf">申敬飞</string>
    <string name="qwj">秦文杰</string>
    <string name="wth">\@2018 ZZU Huzhu Community</string>
    <string name="HuzhuCommunity">互助社区</string>

    <string-array name="sexChoice">
        <item>男</item>
        <item>女</item>
    </string-array>
    <string-array name="Types">
        <item>服饰</item>
        <item>箱包</item>
        <item>数码</item>
        <item>手机</item>
        <item>洗护</item>
        <item>眼镜</item>
        <item>手表</item>
        <item>游戏</item>
        <item>动漫</item>
        <item>花卉</item>
    </string-array>
    <string-array name="Grades">
        <item>2014</item>
        <item>2015</item>
        <item>2016</item>
        <item>2017</item>
        <item>2018</item>
    </string-array>
    <string-array name="Departments">
        <item>水利与环境学院</item>
        <item>物理工程学院</item>
        <item>机械工程学院</item>
        <item>电气工程学院</item>
        <item>信息工程学院</item>
        <item>材料科学与工程学院</item>
        <item>化工与能源学院</item>
        <item>土木工程学院</item>
        <item>建筑学院</item>
        <item>数学系</item>
        <item>化学系</item>
        <item>生物工程系</item>
        <item>理工程学院</item>
        <item>工程力学系</item>
        <item>文学院</item>
        <item>新闻与传播学院</item>
        <item>历史学院</item>
        <item>外语学院</item>
        <item>公共管理学院</item>
        <item>法学院</item>
        <item>商学院</item>
        <item>旅游管理学院</item>
        <item>教育系</item>
        <item>马克思主义学院</item>
        <item>体育系</item>
        <item>音乐系</item>
        <item>美术系</item>
        <item>嵩阳书院</item>
        <item>基础医学院</item>
        <item>临床医学院</item>
        <item>第一临床学院</item>
        <item>第二临床学院</item>
        <item>第三临床学院</item>
        <item>第四临床学院</item>
        <item>第五临床学院</item>
        <item>药学院</item>
        <item>护理学院</item>
        <item>口腔医学院</item>
        <item>临床医学系</item>
        <item>医学检验系</item>
        <item>远程教育学院</item>
        <item>应用科技学院</item>
        <item>软件技术学院</item>
        <item>软件学院</item>
        <item>国际教育学院</item>
        <item>成人教育学院</item>
        <item>城市学院</item>
    </string-array>
    <string-array name="PublishType">
        <item>发布我的资源</item>
        <item>寻求他人帮助</item>
    </string-array>
    <string-array name="AddImageFrom">
        <item>拍照</item>
        <item>从相册选择</item>
    </string-array>
</resources>
