<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.zzu.huzhucommunity.RegisterActivity"
    android:background="@drawable/login_background">
    <android.support.v7.widget.Toolbar
        android:id="@+id/RegisterActivity_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>
    <com.example.zzu.huzhucommunity.customlayout.RegisterEditTextLayout
        android:id="@+id/RegisterActivity_account_custom_holder"
        android:layout_below="@id/RegisterActivity_toolbar"
        style="@style/RegisterActivityCustomHolder"
        app:text="@string/account"/>
    <com.example.zzu.huzhucommunity.customlayout.RegisterEditTextLayout
        android:id="@+id/RegisterActivity_password_custom_holder"
        style="@style/RegisterActivityCustomHolder"
        android:layout_below="@id/RegisterActivity_account_custom_holder"
        app:text="@string/password"
        app:input_password="true"/>
    <com.example.zzu.huzhucommunity.customlayout.RegisterEditTextLayout
        android:id="@+id/RegisterActivity_confirm_password_custom_holder"
        style="@style/RegisterActivityCustomHolder"
        android:layout_below="@id/RegisterActivity_password_custom_holder"
        app:text="@string/confirm_password"
        app:input_password="true"/>
    <com.example.zzu.huzhucommunity.customlayout.RegisterEditTextLayout
        android:id="@+id/RegisterActivity_sex_custom_holder"
        style="@style/RegisterActivityCustomHolder"
        android:layout_below="@id/RegisterActivity_confirm_password_custom_holder"
        app:text="@string/sex"/>
    <com.example.zzu.huzhucommunity.customlayout.RegisterEditTextLayout
        android:id="@+id/RegisterActivity_grade_custom_holder"
        style="@style/RegisterActivityCustomHolder"
        android:layout_below="@id/RegisterActivity_sex_custom_holder"
        app:text="@string/grade"/>
    <com.example.zzu.huzhucommunity.customlayout.RegisterEditTextLayout
        android:id="@+id/RegisterActivity_department_custom_holder"
        style="@style/RegisterActivityCustomHolder"
        android:layout_below="@id/RegisterActivity_grade_custom_holder"
        app:text="@string/department"/>
    <com.example.zzu.huzhucommunity.customlayout.RegisterEditTextLayout
        android:id="@+id/RegisterActivity_phone_custom_holder"
        style="@style/RegisterActivityCustomHolder"
        android:layout_below="@id/RegisterActivity_department_custom_holder"
        app:text="@string/phone"/>
    <Button
        android:id="@+id/RegisterActivity_register_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:background="@drawable/round_rectangle_blue_button"
        android:layout_marginBottom="@dimen/common_margin_large"
        android:textColor="@color/colorWhite"
        android:textSize="16sp"
        android:text="@string/register"/>
</RelativeLayout>
