<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorDeepSkyBlue"
    android:fitsSystemWindows="true"
    tools:context="com.example.zzu.huzhucommunity.activities.AboutUsActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/AboutUsActivity_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:background="@color/colorDeepSkyBlue"
        app:title="@string/HuzhuCommunity"
        app:contentInsetStart="0dp"
        app:contentInsetStartWithNavigation="0dp"/>
    <LinearLayout
        android:id="@+id/AboutUsActivity_mid_name_holder"
        android:background="@color/colorRiceWhite"
        android:layout_below="@id/AboutUsActivity_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorDeepSkyBlue"
            android:layout_gravity="center"
            android:layout_marginTop="150dp"
            android:textSize="@dimen/common_text_size_large"
            android:text="@string/wyb"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:textSize="@dimen/common_text_size_large"
            android:textColor="@color/colorBlack"
            android:text="@string/sjf"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:textSize="@dimen/common_text_size_large"
            android:textColor="@color/colorBlack"
            android:text="@string/qwj"/>
    </LinearLayout>
    <TextView
        android:layout_below="@id/AboutUsActivity_mid_name_holder"
        android:background="@color/colorRiceWhite"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:gravity="bottom|center_horizontal"
        android:paddingBottom="@dimen/common_margin_normal"
        android:text="@string/wth"/>
</RelativeLayout>
