<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    tools:context="com.example.zzu.huzhucommunity.activities.AccountProfileActivity">
    <android.support.v7.widget.Toolbar
        android:id="@+id/AccountProfileActivity_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:contentInsetStart="0dp"
        app:contentInsetStartWithNavigation="0dp" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.example.zzu.huzhucommunity.customlayout.AccountProfileItemLayout
                android:id="@+id/AccountProfileActivity_head_image_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                app:item_title="@string/headImage"
                app:show_icon="true"/>
            <com.example.zzu.huzhucommunity.customlayout.AccountProfileItemLayout
                android:id="@+id/AccountProfileActivity_user_name_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                app:item_title="@string/userName"
                app:show_icon="false"/>
            <com.example.zzu.huzhucommunity.customlayout.AccountProfileItemLayout
                android:id="@+id/AccountProfileActivity_sex_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                app:item_title="@string/sex"
                app:show_icon="true" />
            <com.example.zzu.huzhucommunity.customlayout.AccountProfileItemLayout
                android:id="@+id/AccountProfileActivity_grade_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                app:item_title="@string/grade"
                app:show_icon="false"/>
            <com.example.zzu.huzhucommunity.customlayout.AccountProfileItemLayout
                android:id="@+id/AccountProfileActivity_department_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                app:item_title="@string/department"
                app:show_icon="false"/>
            <com.example.zzu.huzhucommunity.customlayout.AccountProfileItemLayout
                android:id="@+id/AccountProfileActivity_register_time_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                app:item_title="@string/registerTime"
                app:show_icon="false"/>
            <com.example.zzu.huzhucommunity.customlayout.AccountProfileItemLayout
                android:id="@+id/AccountProfileActivity_last_login_time_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                app:item_title="@string/lastLoginTime"
                app:show_icon="false"/>
            <com.example.zzu.huzhucommunity.customlayout.AccountProfileItemLayout
                android:id="@+id/AccountProfileActivity_update_password_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                app:item_title="@string/updatePassword"
                app:show_icon="false"/>
            <com.example.zzu.huzhucommunity.customlayout.AccountProfileItemLayout
                android:id="@+id/AccountProfileActivity_exit_login_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                app:item_title="@string/exitLogin"
                app:show_icon="false"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
