<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.example.zzu.huzhucommunity.activities.OthersProfileActivity">
    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:fitsSystemWindows="true"
        app:elevation="0dp">
        <android.support.design.widget.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:contentScrim="@color/colorDeepSkyBlue"
            app:statusBarScrim="@color/colorDeepSkyBlue"
            app:title="@string/solider"
            app:expandedTitleTextAppearance="?android:attr/textAppearanceLarge"
            app:expandedTitleMarginStart="@dimen/common_margin_large"
            app:layout_scrollFlags="exitUntilCollapsed|scroll">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/app_name"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                android:background="@color/colorBlack"
                android:src="@drawable/profile_head_over_watch"
                app:layout_collapseMode="parallax"/>
            <android.support.v7.widget.Toolbar
                android:id="@+id/OthersProfileActivity_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"/>
        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>
    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/colorWhite">
                <com.example.zzu.huzhucommunity.customlayout.AccountProfileItemLayout
                    android:id="@+id/OthersProfileActivity_user_name_view"
                    android:clickable="true"
                    android:focusable="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:item_title="@string/userName"/>
                <com.example.zzu.huzhucommunity.customlayout.AccountProfileItemLayout
                    android:id="@+id/OthersProfileActivity_sex_view"
                    android:clickable="true"
                    android:focusable="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:item_title="@string/sex"/>
                <com.example.zzu.huzhucommunity.customlayout.AccountProfileItemLayout
                    android:id="@+id/OthersProfileActivity_phone_view"
                    android:clickable="true"
                    android:focusable="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:item_title="@string/phone"/>
            </LinearLayout>
            <LinearLayout
                android:layout_marginTop="@dimen/common_margin_normal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/colorWhite">
                <com.example.zzu.huzhucommunity.customlayout.AccountProfileItemLayout
                    android:id="@+id/OthersProfileActivity_grade_view"
                    android:clickable="true"
                    android:focusable="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:item_title="@string/grade"/>
                <com.example.zzu.huzhucommunity.customlayout.AccountProfileItemLayout
                    android:id="@+id/OthersProfileActivity_department_view"
                    android:clickable="true"
                    android:focusable="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:item_title="@string/department"/>
            </LinearLayout>
            <LinearLayout
                android:layout_marginTop="@dimen/common_margin_normal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/colorWhite">
                <com.example.zzu.huzhucommunity.customlayout.AccountProfileItemLayout
                    android:id="@+id/OthersProfileActivity_register_time_view"
                    android:clickable="true"
                    android:focusable="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:item_title="@string/registerTime"/>
            </LinearLayout>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
    <Button
        android:id="@+id/OthersProfileActivity_send_message_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/common_text_size_large"
        android:text="@string/sendMessage"
        android:background="@drawable/rectangle_blue_pressed_deep"
        android:layout_gravity="bottom"/>
</android.support.design.widget.CoordinatorLayout>
