<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background">
    <ImageView
        android:id="@+id/LoginActivity_profile_image_view"
        android:layout_width="@dimen/login_profile_image_size"
        android:layout_height="@dimen/login_profile_image_size"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/login_margin_large"
        android:src="@drawable/profile_head"
        android:contentDescription="@string/app_name"/>
    <EditText
        android:id="@+id/LoginActivity_account_edit_text"
        android:layout_below="@id/LoginActivity_profile_image_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="@dimen/login_edit_text_width"
        android:layout_marginTop="@dimen/login_margin_large"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:maxLines="1"
        android:background="@null"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorWhite"
        android:hint="@string/account"/>
    <View
        android:layout_width="@dimen/login_edit_text_width"
        android:layout_below="@id/LoginActivity_account_edit_text"
        android:layout_height="0.5dp"
        android:layout_centerHorizontal="true"
        android:background="@color/colorWhite"/>
    <EditText
        android:id="@+id/LoginActivity_password_edit_text"
        android:layout_below="@id/LoginActivity_account_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="@dimen/login_edit_text_width"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/login_margin_small"
        android:gravity="center_horizontal"
        android:inputType="textPassword"
        android:maxLines="1"
        android:background="@null"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorWhite"
        android:hint="@string/password"/>
    <View
        android:layout_width="@dimen/login_edit_text_width"
        android:layout_below="@id/LoginActivity_password_edit_text"
        android:layout_height="0.5dp"
        android:layout_centerHorizontal="true"
        android:background="@color/colorWhite"/>
    <Button
        android:id="@+id/LoginActivity_login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/login_margin_large"
        android:layout_below="@id/LoginActivity_password_edit_text"
        android:layout_centerHorizontal="true"
        android:background="@drawable/round_rectangle_blue_button"
        android:textColor="@color/colorWhite"
        android:textSize="16sp"
        android:text="@string/login"/>
    <TextView
        android:id="@+id/LoginActivity_register_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="10dp"
        android:clickable="true"
        android:focusable="true"
        android:textColor="@color/colorWhite"
        android:text="@string/new_user_register"/>
    <TextView
        android:id="@+id/LoginActivity_forget_password_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:clickable="true"
        android:focusable="true"
        android:textColor="@color/colorWhite"
        android:text="@string/forget_password" />
</RelativeLayout>